# IngenicHAL

./: CMakeLists.txt  README.md
cmake/: CMakeToolchain.txt
examples/: minicore_gpio_flip.c  minicore_rgb_lcd.c  st7789_bitbang.c  x2000_pwm_dma.c
src/: ingenic-hal.h
src/common/: bitops.h  wait.h
src/minicore/asm/: cacheops.h  elf.h  mipsregs.h  mipsregs_others.h
src/minicore/cpu/: ffs.h  host_cpu.h  io.h  irq.h  irqflags.h
src/minicore/init/: exception.S  host_cpu.c  init.c  irq.c  start.S
src/minicore/linker/: x2000.lds
src/peripheral/: peripheral.h
src/peripheral/gpio/: gpio.c  gpio.h  gpio_def.h
src/peripheral/pwm/: pwm.c  pwm.h  pwm_def.h
src/peripheral/spi/: spi.c  spi.h  spi_def.h
utils/: fb_draw_rect.c  ingenic_gpio.c  ingenic_pwm.c  minicore_util.c  st7789_bitbang.c
